Create a full ingestion pipeline. (#378)